new datasets added

--- a/diabetes_type1/diabetes_type1.ipynb
+++ b/diabetes_type1/diabetes_type1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -432,6 +433,55 @@
     "df = pd.read_csv(\"Dataset Diabetes Type1 (Total).csv\")\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                                           0\n",
+       "Sex                                           0\n",
+       "Area of Residence                             0\n",
+       "HbA1c                                         0\n",
+       "Height                                        0\n",
+       "Weight                                        0\n",
+       "BMI                                           0\n",
+       "Duration of disease                           0\n",
+       "Other diease                                  0\n",
+       "Adequate Nutrition                            0\n",
+       "Education of Mother                           0\n",
+       "Standardized growth-rate in infancy           0\n",
+       "Standardized birth weight                     0\n",
+       "Autoantibodies                                0\n",
+       "Impaired glucose metabolism                   0\n",
+       "Insulin taken                                 0\n",
+       "How Taken                                     0\n",
+       "Family History affected in Type 1 Diabetes    0\n",
+       "Family History affected in Type 2 Diabetes    0\n",
+       "Hypoglycemis                                  0\n",
+       "pancreatic disease affected in child          0\n",
+       "Affected                                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
