--- a/diabetes_type1/diabetes_type1.ipynb
+++ b/diabetes_type1/diabetes_type1.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "[306 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,6 +949,217 @@
    "source": [
     "Family_history_in_Diabetes2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                                            object\n",
+       "Sex                                            object\n",
+       "Area of Residence                              object\n",
+       "HbA1c                                          object\n",
+       "Height                                        float64\n",
+       "Weight                                        float64\n",
+       "BMI                                           float64\n",
+       "Duration of disease                            object\n",
+       "Other diease                                   object\n",
+       "Adequate Nutrition                             object\n",
+       "Education of Mother                            object\n",
+       "Standardized growth-rate in infancy            object\n",
+       "Standardized birth weight                      object\n",
+       "Autoantibodies                                 object\n",
+       "Impaired glucose metabolism                    object\n",
+       "Insulin taken                                  object\n",
+       "How Taken                                      object\n",
+       "Family History affected in Type 1 Diabetes     object\n",
+       "Family History affected in Type 2 Diabetes     object\n",
+       "Hypoglycemis                                   object\n",
+       "pancreatic disease affected in child           object\n",
+       "Affected                                       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>BMI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>306.000000</td>\n",
+       "      <td>306.000000</td>\n",
+       "      <td>306.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.349346</td>\n",
+       "      <td>38.854575</td>\n",
+       "      <td>20.860711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.277601</td>\n",
+       "      <td>16.689427</td>\n",
+       "      <td>6.225745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.440000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>10.077936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.220000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>16.928286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.420000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>19.813209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.560000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>23.711124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.830000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>61.983471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Height      Weight         BMI\n",
+       "count  306.000000  306.000000  306.000000\n",
+       "mean     1.349346   38.854575   20.860711\n",
+       "std      0.277601   16.689427    6.225745\n",
+       "min      0.440000    5.000000   10.077936\n",
+       "25%      1.220000   25.000000   16.928286\n",
+       "50%      1.420000   40.000000   19.813209\n",
+       "75%      1.560000   50.000000   23.711124\n",
+       "max      1.830000   87.000000   61.983471"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Over 7.5%', 'Less then 7.5%'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['HbA1c'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "label Encoder for converting object into integer or float data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.drop(['Duration of disease','How Taken'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(306, 20)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
