--- a/diabetes_type1/diabetes_type1.ipynb
+++ b/diabetes_type1/diabetes_type1.ipynb
@@ -613,8 +613,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Family_history_in_Diabetes1=pd.read_csv('Dataset15Q.csv')\n",
-    "Family_history_in_Diabetes2=pd.read_csv('Dataset16Q.csv')\n",
+    "Family_history_in_Diabetes1=pd.read_csv('Dataset15Q.csv')# data if the family has any diabetes 1 history\n",
+    "Family_history_in_Diabetes2=pd.read_csv('Dataset16Q.csv')# data if the family has any diabetes 2 history\n",
     "diabetes_attributes = pd.read_csv('Dataset20Q.csv')\n"
    ]
   },
