--- a/diabetes_type1/diabetes_type1.ipynb
+++ b/diabetes_type1/diabetes_type1.ipynb
@@ -436,6 +436,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Sex', 'Area of Residence ', 'HbA1c', 'Height', 'Weight', 'BMI',\n",
+       "       'Duration of disease', 'Other diease', 'Adequate Nutrition ',\n",
+       "       'Education of Mother', 'Standardized growth-rate in infancy',\n",
+       "       'Standardized birth weight', 'Autoantibodies',\n",
+       "       'Impaired glucose metabolism ', 'Insulin taken', 'How Taken',\n",
+       "       'Family History affected in Type 1 Diabetes',\n",
+       "       'Family History affected in Type 2 Diabetes', 'Hypoglycemis',\n",
+       "       'pancreatic disease affected in child ', 'Affected'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
