--- a/diabetes_dataset/diabetes_dataset.ipynb
+++ b/diabetes_dataset/diabetes_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "array([0, 1, 2], dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,19 +728,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Gender  AGE  Urea  Cr  HbA1c  Chol   TG   BMI  type  gender\n",
+      "991      f   55   4.1  34   13.9   5.4  1.6  33.0     2       2\n"
+     ]
+    }
+   ],
    "source": [
     "label_encoder = LabelEncoder()\n",
     "\n",
     "# Fit and transform the 'Color' column using the LabelEncoder\n",
-    "df['gender'] = label_encoder.fit_transform(df['Gender'])"
+    "df['gender'] = label_encoder.fit_transform(df['Gender'])\n",
+    "result_row = df.loc[df['gender'] == 2]\n",
+    "print(result_row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,10 +971,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gender'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value of column AGE is : (79) and minimum value is : (20) so range is (20,79)\n",
+      "Maximum value of column Urea is : (38.9) and minimum value is : (0.5) so range is (0.5,38.9)\n",
+      "Maximum value of column Cr is : (800) and minimum value is : (6) so range is (6,800)\n",
+      "Maximum value of column HbA1c is : (16.0) and minimum value is : (0.9) so range is (0.9,16.0)\n",
+      "Maximum value of column Chol is : (10.3) and minimum value is : (0.0) so range is (0.0,10.3)\n",
+      "Maximum value of column TG is : (13.8) and minimum value is : (0.3) so range is (0.3,13.8)\n",
+      "Maximum value of column BMI is : (47.75) and minimum value is : (19.0) so range is (19.0,47.75)\n",
+      "Maximum value of column type is : (2) and minimum value is : (0) so range is (0,2)\n",
+      "Maximum value of column gender is : (2) and minimum value is : (0) so range is (0,2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for z in df :\n",
+    "    print(f'Maximum value of column {z} is : ({df[z].max()}) and minimum value is : ({df[z].min()}) so range is ({df[z].min()},{df[z].max()})')"
+   ]
   },
   {
    "cell_type": "code",
